--- a/code/ui_server/parallel/templates/index.html
+++ b/code/ui_server/parallel/templates/index.html
@@ -15,6 +15,7 @@
   <div class="wrapper">
     <button class = "btn"><a href = "{% url 'parallel:read_html' %}"> GET </a></button>
     <button class = "btn"><a href = "{% url 'parallel:write_html' %}"> PUT </a></button>
+    <button class = "btn"><a href = "{% url 'parallel:del_html' %}"> PUT </a></button>
   </div>
 </body>
 </html>
